# ComfyUI

./: .bajko_marker  .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .pre-commit-config.yaml  .pylintrc  .tool-versions  1_INSTALL.bat  2_INSTALL_CUSTOM_NODES.bat  AMD.Dockerfile  API_AUTHENTICATION.md  API_SECURITY_IMPLEMENTATION.md  AUTHENTICATION_GUIDE.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CREATE_ISSUE_INSTRUCTIONS.md  ComfyUI_cuda_env.yaml  Dockerfile  Dockerfile.fix  Dockerfile.headless  Dockerfile.master  Dockerfile.runpod  Dockerfile.serverless  EXTRA_CUSTOM_NODE_PATHS_README.md  FEATURE_REQUEST_ISSUE.md  FINAL_SUMMARY.md  FRONTEND_AUTH_GUIDE.md  Fix missing except and finally clauses in try blocks  Irian_Notebook.ipynb  LICENSE  MANIFEST.in  MEMEDECK.md  Mr.G-ComfyUI.pyproj  Mr.G-ComfyUI.sln  (+251 more)
custom_nodes/ComfyUI-GGUF/: .gitignore  .tracking  README.md  __init__.py  dequant.py  loader.py  nodes.py  ops.py  pyproject.toml  requirements.txt
custom_nodes/ComfyUI-GGUF/tools/: README.md  convert.py  fix_5d_tensors.py  fix_lines_ending.py  lcpp.patch  read_tensors.py
custom_nodes/ComfyUI-Manager/: README.md  __init__.py  alter-list.json  check.bat  check.sh  cm-cli.py  custom-node-list.json  extension-node-map.json  git_helper.py  github-stats.json  json-checker.py  model-list.json  pip_overrides.json.template  prestartup_script.py  pyproject.toml  requirements.txt  scan.sh  scanner.py
custom_nodes/ComfyUI-Manager/glob/: cm_global.py  manager_core.py  manager_downloader.py  manager_server.py  manager_util.py  security_check.py
custom_nodes/ComfyUI-Manager/js/: cm-api.js  comfyui-manager.js  comfyui-share-common.js  comfyui-share-copus.js  comfyui-share-openart.js  comfyui-share-youml.js  common.js  components-manager.js  custom-nodes-manager.js  model-manager.js  node_fixer.js  snapshot.js  terminal.js  turbogrid.esm.js
custom_nodes/ComfyUI-Manager/misc/: Impact.pack
custom_nodes/ComfyUI-Manager/notebooks/: comfyui_colab_with_manager.ipynb
custom_nodes/ComfyUI-Manager/scripts/: colab-dependencies.py  install-comfyui-venv-linux.sh  install-comfyui-venv-win.bat  install-manager-for-portable-version.bat  update-fix.py
custom_nodes/cg-image-filter/: .tracking  README.md  __init__.py  image_filter.py  image_filter_messaging.py  list_utility_nodes.py  mask_utility_nodes.py  pyproject.toml  string_utility_nodes.py
custom_nodes/cg-image-filter/js/: filter.css  floating_window.css  floating_window.js  image_filter.js  log.js  mask_utils.js  popup.js  utils.js  zoomed.css
custom_nodes/cg-use-everywhere/: .gitignore  .tracking  README-old.md  README.md  __init__.py  pyproject.toml  use_everywhere.py  workflow_fixer.py
custom_nodes/cg-use-everywhere/docs/: deprecated.md  test-workflow.json
custom_nodes/cg-use-everywhere/js/: floating_window.js  i18n.js  tooltip_window.js  ue.css  ue_debug.js  ue_properties.js  ue_properties_editor.js  use_everywhere.js  use_everywhere_apply.js  use_everywhere_cache.js  use_everywhere_classes.js  use_everywhere_graph_analysis.js  use_everywhere_nodes.js  use_everywhere_settings.js  use_everywhere_subgraph_utils.js  use_everywhere_ui.js  (+1 more)
custom_nodes/comfyui-custom-scripts/: .gitignore  .tracking  LICENSE  README.md  __init__.py  pyproject.toml  pysssss.default.json  pysssss.example.json  pysssss.py
custom_nodes/comfyui-easy-use/: .gitignore  .gitmodules  .tracking  README.ZH_CN.md  README.md  __init__.py  install.bat  install.sh  prestartup_script.py  pyproject.toml  repair_dependency_list.txt  requirements.txt
custom_nodes/comfyui-embedding_picker/: .gitignore  .tracking  README.md  __init__.py  node.py  pyproject.toml
custom_nodes/comfyui-florence2/: .gitignore  .tracking  LICENSE  README.md  configuration_florence2.py  modeling_florence2.py  nodes.py  pyproject.toml  requirements.txt
custom_nodes/comfyui-frame-interpolation/: .gitignore  .tracking  LICENSE  README.md  __init__.py  config.yaml  install-taichi.bat  install.bat  install.py  other_nodes.py  pyproject.toml  requirements-no-cupy.txt  requirements-with-cupy.txt  test.py  vfi_utils.py
custom_nodes/comfyui-impact-pack/: .gitignore  .gitmodules  .tracking  README.md  __init__.py  install.py  node_list.json  pyproject.toml  requirements.txt  ruff.toml
custom_nodes/comfyui-inpaint-cropandstitch/: .gitignore  .tracking  README.md  __init__.py  inpaint_cropandstitch.py  inpaint_cropandstitch_old.py  pyproject.toml  testsinpaintcropandstitch.json
custom_nodes/comfyui-kjnodes/: .gitignore  .tracking  README.md  __init__.py  custom_dimensions_example.json  pyproject.toml  requirements.txt
custom_nodes/comfyui-lora-manager/: .gitignore  .tracking  LICENSE  README.md  __init__.py  path_mappings.yaml.example  pyproject.toml  requirements.txt  settings.json.example  standalone.py  update_logs.md
custom_nodes/comfyui-mxtoolkit/: .tracking  README.md  __init__.py  mxtoolkit.py  pyproject.toml
custom_nodes/comfyui-reactor/: .gitignore  .tracking  README.md  README_RU.md  __init__.py  install.bat  install.py  nodes.py  pyproject.toml  reactor_patcher.py  reactor_utils.py  requirements.txt
custom_nodes/comfyui-videohelpersuite/: .gitignore  .tracking  README.md  __init__.py  pyproject.toml  requirements.txt
custom_nodes/comfyui_ultimatesdupscale/: .gitignore  .gitmodules  .tracking  LICENSE  README.md  __init__.py  config.json  gradio.py  nodes.py  pyproject.toml  usdu_patch.py  utils.py
custom_nodes/rgthree-comfy/: .gitignore  .prettierrc.json  .pylintrc  .style.yapf  .tracking  LICENSE  README.md  __build__.py  __commit__.py  __init__.py  __update_comfy__.py  package-lock.json  package.json  prestartup_script.py  pyproject.toml  rgthree_config.json.default  tsconfig.json
custom_nodes/wanblockswap/: .gitignore  .tracking  README.md  __init__.py  nodes.py  pyproject.toml
custom_nodes/was-node-suite-comfyui/: .gitignore  .tracking  ComfyUI_+_WAS_Node_Suite_and_ComfyUI_Manager.ipynb  LICENSE  README.md  WAS_Node_Suite.py  __init__.py  install.bat  install_alt.bat  pyproject.toml  requirements.txt
(+5111 files in other folders)
