[project]
name = "ComfyUI-GGUF"
description = "GGUF Quantization support for native ComfyUI models."
version = "1.1.3" # 2.0.0 = GitHub main, 1.X.X = ComfyUI Registry
license = { file = "LICENSE" }
dependencies = ["gguf>=0.13.0", "sentencepiece", "protobuf"]

[project.urls]
Repository = "https://github.com/city96/ComfyUI-GGUF"

[tool.comfy]
PublisherId = "city96"
DisplayName = "ComfyUI-GGUF"
Icon = ""
