[project]
name = "comfyui-embedding_picker"
description = "Tired of forgetting and misspelling often weird names of embeddings you use? Or perhaps you use only one, cause you forgot you have tens of them installed?"
version = "2.1.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Tropfchen/ComfyUI-Embedding_Picker"

[tool.comfy]
PublisherId = "tropfchen"
DisplayName = "Embedding Picker"
Icon = ""

[tool.black]
target-version = ["py311", "py312"]
