[project]
name = "comfyui-florence2"
description = "Nodes to use Florence2 VLM for image vision tasks: object detection, captioning, segmentation and ocr"
version = "1.0.6"
license = "MIT"
dependencies = ["transformers>=4.39.0,!=4.50.*"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-Florence2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-Florence2"
Icon = ""
