[project]
name = "comfyui-reactor"
description = "(SFW-Friendly) The Fast and Simple Face Swap Extension Node for ComfyUI, based on ReActor SD-WebUI Face Swap Extension"
version = "0.6.1-b3"
license = { file = "LICENSE" }
dependencies = ["insightface==0.7.3", "onnx>=1.14.0", "opencv-python>=4.7.0.72", "numpy==1.26.4", "segment_anything", "albumentations>=1.4.16", "ultralytics"]

[project.urls]
Repository = "https://github.com/Gourieff/ComfyUI-ReActor"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gourieff"
DisplayName = "ComfyUI-ReActor"
Icon = ""
